# blobber

./: README.org  blobber.py  fixtar.py  flake.nix  pyproject.toml
blobber/: __init__.py  blob.py  blobber.py  cli.py  fixtar.py  hash.py  storage.py
emacs/: blobber-mode.el  blobber.el
