[tool.poetry]
name = "blobber"
version = "0.1.0"
description = ""
authors = ["Daniel Nagy <danielnagy@posteo.de>"]
packages = [
  { include = "blobber.py" },
  { include = "fixtar.py" },
]

[tool.poetry.dependencies]
python = "^3.9"
xdg = "^5.1.1"
click = "^8.0.3"

[tool.poetry.scripts]
blobber = "blobber:main"
fixtar = "fixtar:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
