[tool.poetry]
name = "blobber"
version = "0.1.0"
description = "Tool to store BLOBs (Binary Large Objects)"
authors = ["Daniel Nagy <danielnagy@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.9"
xdg = "^5.1.1"
click = "^8.0.3"

[tool.poetry.scripts]
blobber = "blobber.cli:main"
fixtar = "blobber.fixtar:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
